Removed log messages

--- a/views/lager.ejs
+++ b/views/lager.ejs
@@ -21,10 +21,10 @@
                             Ingredient
                         </th>
                         <th>
-                            Amount
+                            Kvantitet
                         </th>
                         <th>
-                            Recommended amount
+                            Rekommenderad mängd
                         </th>
                     </tr>
 
