--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -25,10 +25,10 @@
                     <a href="/" class="navbar__links" id="home-page">Hem</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/order" class="navbar__links" id="about-page">Om oss</a>
+                    <a href="/" class="navbar__links" id="about-page">Om oss</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#home" class="navbar__links" id="lager-page">Lager</a>
+                    <a href="/lager" class="navbar__links" id="lager-page">Lager</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/order" class="navbar__links" id="order-page">Ordrar</a>
