--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -18,13 +18,13 @@
                 <table id="order-table">
                     <tr>
                         <th>
-                            Supplier
+                            Leverantör
                         </th>
                         <th>
                             Ingredient
                         </th>
                         <th>
-                            Quantity
+                            Kvantitet
                         </th>
                     </tr>
 
