Sista design exemplaret.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,7 @@
         <div class="hero" id="home">
             <div class="hero__container">
                 <h1 class="hero__heading">Real time <span>inventory</span></h1>
-                <p class="hero__description">Beskrivning</p>
-                <button class="main__btn"><a href="#">Länk</a></button>
+                <p class="hero__description">"Lagersystemet inte ens du visste du behövde!"</p>
             </div>
         </div>
 
@@ -28,8 +27,7 @@
                 </div>
                 <div class="main__content">
                     <h1>Vad gör vi?</h1>
-                    <h2>Vi hjälper företag att hålla koll på sitt lager och vid inventering</h2>
-                    <p>Ring 112 för mer info</p>
+                    <p>Vi hjälper företag att hålla koll på sitt lager och vid inventering</p>
                 </div>
             </div>
         </div>
