--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -25,7 +25,7 @@
                     <a href="/" class="navbar__links" id="home-page">Hem</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links" id="about-page">Om oss</a>
+                    <a href="/om" class="navbar__links" id="about-page">Om oss</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/lager" class="navbar__links" id="lager-page">Lager</a>
