--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,7 +136,7 @@
 }
 
 .hero__description {
-    font-size: 60px;
+    font-size: 30px;
     background: #da22ff;
     background: -webkit-linear-gradient(to right, #9114ff, #da22ff);
     background: linear-gradient(to right, #8f0eff, #da22ff);
@@ -269,10 +269,13 @@
     margin: 10px;
     height: 500px;
     width: 500px;
-    border-radius: 4px;
+    border-radius: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-image: url("/img/Logo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
